# ESST

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  autobuild  autobuild.cpp  esstAPI.hpp
asm/: 3np1.asm  aes.asm  aesDEC.asm  aesENC.asm  avx.asm  core.asm  diskWrite.asm  flood.asm  primes.asm  sha256.asm
include/: core.hpp  termcolor.hpp
nogui/: .ninja_deps  .ninja_log  build.ninja  esstCLI
rocm/: core.hip.cpp  core2.hip.cpp  kernel.h  kernel.hip.cpp  math.hip.cpp
src/: lzma.module.cpp  main.cpp  main2.cpp  mainCLI.cpp  systemMonitor.manage.cpp
